Revision history for Perl extension Metabrik.

1.06 
   - bugfix: core::*: on SIGINT handling, now allows to break multiline and run Commands
   - bugfix: core::shell: allow user to get out of multiline mode by hitting Ctrl+C
   - bugfix: core::shell: better management of Metabrik Commands in multiline mode
   => you can put Metabrik Commands within single quotes anywhere
   - update: shell::script: load Command can take an optional file parameter

1.05 Tue Feb 10 08:01:53 CET 2015
   - FEATURE: core::shell: multiline mode do not require lines to end with `\' anymore
   - FEATURE: core::shell: Metabrik commands are directly translated to Perl code
              => Note: no alias support for now, only set, get, run and use are handled
   - bugfix: shell::command: check for error code from `` call
   - bugfix: Metabrik: do not override default Attributes with brik_use_properties
             if already set by brik_properties
   - bugfix: Metabrik: correctly prints help Command details when overriden by subclass
   - new: Metabrik: brik_preinit() creates a datadir directory per Brik 
          if datadir property exists.
   - update: Metabrik: default directory is set to $HOME/metabrik i/o /tmp

1.04 Sun Jan  4 13:07:56 CET 2015
   - bugfix: core::context: don't overwrite $RUN when run Command fails
   - bugfix: core::shell: help Command must not overwrite $RUN variable
   - bugfix: core::log: error Command must return undef, this is the error status
   - new: Metabrik: new_from_brik_init() base method
   - copyright: update to 2015

1.03 Sat Dec 20 17:48:44 CET 2014
   - bugfix: shell::script: return proper values from run cmds
   - bugfix: shell::script: disable SIGINT when running a script
   - update: core::shell: always complete Briks on use, even when Brik is already used
   - new: core::global: exit_on_sigint Attribute, for use in scripts
   - new: core::shell: help_show_inherited and comp_show_inherited Attributes to 